@@ -9,6 +9,7 @@ import gov.cdc.usds.simplereport.db.model.ApiUser;
 import gov.cdc.usds.simplereport.db.model.auxiliary.PersonName;
 import gov.cdc.usds.simplereport.service.ApiUserService;
 import gov.cdc.usds.simplereport.service.model.UserInfo;
+import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
@@ -50,35 +51,24 @@ public class UserMutationResolver {
   }
 
   @MutationMapping
-  public User addUserToCurrentOrg(
-      @Argument PersonName name,
-      @Argument String firstName,
-      @Argument String middleName,
-      @Argument String lastName,
-      @Argument String suffix,
-      @Argument String email,
-      @Argument Role role,
-      @Argument UserInput userInput) {
-    UserInfo user;
-    if (userInput != null) {
-      Set<UUID> facilitySet =
-          userInput.getFacilities() == null ? Set.of() : new HashSet<>(userInput.getFacilities());
-      user =
-          _us.createUserInCurrentOrg(
-              userInput.getEmail(),
-              Translators.consolidateNameArguments(
-                  userInput.getName(),
-                  userInput.getFirstName(),
-                  userInput.getMiddleName(),
-                  userInput.getLastName(),
-                  userInput.getSuffix()),
-              userInput.getRole(),
-              userInput.isAccessAllFacilities(),
-              facilitySet);
-    } else {
-      name = Translators.consolidateNameArguments(name, firstName, middleName, lastName, suffix);
-      user = _us.createUserInCurrentOrg(email, name, role, false, Set.of());
-    }
+  public User addUserToCurrentOrg(@Argument UserInput userInput) {
+    Set<UUID> facilitySet =
+        userInput.getFacilities() == null
+            ? Collections.emptySet()
+            : new HashSet<>(userInput.getFacilities());
+    var user =
+        _us.createUserInCurrentOrg(
+            userInput.getEmail(),
+            Translators.consolidateNameArguments(
+                userInput.getName(),
+                userInput.getFirstName(),
+                userInput.getMiddleName(),
+                userInput.getLastName(),
+                userInput.getSuffix()),
+            userInput.getRole(),
+            userInput.isAccessAllFacilities(),
+            facilitySet);
+
     return new User(user);
   }
 
